swagger-auto generating server/client
